--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^12.4.1",
+    "cheerio": "^1.1.2",
     "express": "^5.1.0"
   }
 }
