--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "api": "node history_server.js",
+    "web": "python3 -m http.server 8080 --bind 127.0.0.1",
+    "dev": "npm run api & npm run web",
+    "start": "npm run dev",
+    "open": "open http://127.0.0.1:8080/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
